eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Budget_Planner_Item__c.object
<CustomObject>
    <description>Each record represents an expense/bill for either an account or an application(opportunity).</description>
    <fields>
        <fullName>Account_Value__c</fullName>
        <label>Account Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budget Planner Items</relationshipLabel>
        <relationshipName>Budget_Planner_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Total__c</fullName>
        <label>Applicant Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDM_Comments__c</fullName>
        <label>BDM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudgetPlannerConfig__c</fullName>
        <label>BudgetPlannerConfig</label>
        <referenceTo>BudgetPlannerConfig__c</referenceTo>
        <relationshipLabel>Budget Planner Items</relationshipLabel>
        <relationshipName>Budget_Planner_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Value__c</fullName>
        <label>Credit Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>BudgetPlannerConfig__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Budget Planner Items</relationshipLabel>
        <relationshipName>Budget_Planner_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_to_be_used__c</fullName>
        <label>Value to be used</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Budget Planner Item</label>
    <nameField>
        <label>BudgetPlannerAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Planner Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>